31 May 2007: Wouter
	- querytargets state.
	- dname_subdomain_c() routine.
	- server selection, based on RTT. ip6 is filtered out if not available,
	  and lameness is checked too.
	- delegation point copy routine.

30 May 2007: Wouter
	- removed FLAG_CD from message and rrset caches. This was useful for
	  an agnostic forwarder, but not for a sophisticated (trust value per
	  rrset enabled) cache.
	- iterator reponse typing.
	- iterator cname handle.
	- iterator prime start.
	- subquery work.
	- processInitRequest and processInitRequest2.
	- cache synthesizes referral messages, with DS and NSEC.
	- processInitRequest3.
	- if a request creates multiple subrequests these are all activated.

29 May 2007: Wouter
	- routines to lock and unlock array of rrsets moved to cache/rrset.
	- lookup message from msg cache (and copy to region).
	- fixed cast error in dns msg lookup.
	- message with duplicate rrset does not increase its TTLs twice.
	- 'qnamesize' changed to 'qname_len' for similar naming scheme.

25 May 2007: Wouter
	- Acknowledge use of unbound-java code in iterator. Nicer readme.
	- services/cache/dns.c DNS Cache. Hybrid cache uses msgcache and
	  rrset cache from module environment.
	- packed rrset key has type and class as easily accessable struct
	  members. They are still kept in network format for fast msg encode.
	- dns cache find_delegation routine.
	- iterator main functions setup.
	- dns cache lookup setup.

24 May 2007: Wouter
	- small changes to prepare for subqueries.
	- iterator forwarder feature separated out.
	- iterator hints stub code, config file stub code, so that first
	  testing can proceed locally.
	- replay tests now have config option to enable forwarding mode.

23 May 2007: Wouter
	- outside network does precise timers for roundtrip estimates for rtt
	  and for setting timeout for UDP. Pending_udp takes milliseconds.
	- cleaner iterator sockaddr conversion of forwarder address.
	- iterator/iter_utils and iter_delegpt setup.