@@ -54,12 +54,10 @@ struct region;
  * @param qinfo: the query info that was sent to the server. Checked.
  * @param zonename: the name of the last delegation point.
  *	Used to determine out of bailiwick information.
- * @param zonelen: length of zonename.
  * @param region: where to allocate (new) parts of the message.
  * @return: false if the message is total waste. true if scrubbed with success.
  */
 int scrub_message(ldns_buffer* pkt, struct msg_parse* msg, 
-	struct query_info* qinfo, uint8_t* zonename, size_t zonelen, 
-	struct region* region);
+	struct query_info* qinfo, uint8_t* zonename, struct region* region);
 
 #endif /* ITERATOR_ITER_SCRUB_H */
