@@ -1,3 +1,8 @@
+1 June 2007: Wouter
+	- normalize incoming messages. Like unbound-java, with CNAME chain
+	  checked, DNAME checked, CNAME's synthesized, glue checked.
+	- sanitize incoming messages.
+
 31 May 2007: Wouter
 	- querytargets state.
 	- dname_subdomain_c() routine.
